syntax = "proto3";

option java_package = "corfu.logstorageunit";

message ProtobufCommand {
    enum Type {
        READ = 0;
        WRITE = 1;
        DELETE = 2;
        SEAL = 3;
    }

    Type type = 1;
    uint32 epoch = 2;
    uint64 address = 3;
    bytes content = 4;
}

message ReadCommandResult {
    enum Type {
        ACK = 0;
        ERR_UNWRITTEN = 1;
        ERR_DELETED = 2;
        ERR_SEALED = 3;
    }

    Type type = 1;
    bytes content = 2;
}

message WriteCommandResult {
    enum Type {
        ACK = 0;
        ERR_WRITTEN = 1;
        ERR_DELETED = 2;
        ERR_SEALED = 3;
    }

    Type type = 1;
}

message DeleteCommandResult {
    enum Type {
        ACK = 0;
    }

    Type type = 1;
}

message SealCommandResult {
    enum Type {
        ACK = 0;
        ERR_SEALED = 1;
    }

    Type type = 1;
    uint64 highestAddress = 3;
}
